--- a/page1.html
+++ b/page1.html
@@ -41,7 +41,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="index.html#top">
+                    <a href="index.html#header9-9">
                          <img src="assets/images/untitled-5.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -50,10 +50,10 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="page2.html#content5-r">Portofolio</a>
+                    <a class="nav-link link text-white display-4" href="page2.html#content5-1v">Portofolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="page1.html#header8-n">
+                    <a class="nav-link link text-white display-4" href="page1.html#content5-1k">
                         
                         CV</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page3.html#content5-1p">
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-s3Sjt2J4iC" id="content5-1k">
+<section class="engine"><a href="https://mobirise.info/i">web creation software</a></section><section class="mbr-section content5 cid-s3Sjt2J4iC" id="content5-1k">
 
     
 
